--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
 .git
 web/pib/file/video.mp4
+web/pib/file/creation/9.1.temp.mp4
+web/pib/file/creation/9.2.temp.mp4
+web/pib/file/creation/9.mp4
+web/pib/file/creation/9.bat
+web/pib/file/creation/9.srt
+web/pib/file/video/video.mp4
