--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ web/pib/file/creation/9.2.temp.mp4
 web/pib/file/creation/9.mp4
 web/pib/file/creation/9.bat
 web/pib/file/creation/9.srt
+web/pib/file/creation/9.sh
